--- a/index.html
+++ b/index.html
@@ -32,95 +32,7 @@ A strikingly designed Framer Website template perfect for showcasing your Agency
 </style><!-- Start of headEnd -->
     
     <!-- End of headEnd -->
-<style type="text/css" data-framer-css="true"></style><style type="text/css">
-#__framer-editorbar.mode_normal {
-    overflow: hidden;
-    position: fixed;
-    bottom: 10px;
-    height: 34px;
-    border: none;
-    z-index: 2147483647;
-}
-
-#__framer-editorbar.mode_normal.status_hidden {
-    display: none;
-}
-
-#__framer-editorbar.mode_normal.status_measuring {
-    left: 0;
-    width: 100%;
-}
-
-#__framer-editorbar.mode_normal[width] {
-    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.2), 0px 10px 20px 0px rgba(0, 0, 0, 0.2);
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#__framer-editorbar.mode_subtle {
-    --padding-right: 10px;
-    overflow: hidden;
-    position: fixed;
-    right: var(--padding-right);
-    border: none;
-    z-index: 2147483647;
-    top: 0;
-    width: calc(100vw - var(--padding-right));
-    height: 100vh;
-}
-
-#__framer-editorbar.mode_subtle.status_hidden {
-    display: none;
-}
-
-#__framer-editorbar.mode_subtle.status_measuring {
-    clip-path: unset;
-}
-</style><style type="text/css" data-framer-css="true"></style><style type="text/css">
-#__framer-editorbar.mode_normal {
-    overflow: hidden;
-    position: fixed;
-    bottom: 10px;
-    height: 34px;
-    border: none;
-    z-index: 2147483647;
-}
-
-#__framer-editorbar.mode_normal.status_hidden {
-    display: none;
-}
-
-#__framer-editorbar.mode_normal.status_measuring {
-    left: 0;
-    width: 100%;
-}
-
-#__framer-editorbar.mode_normal[width] {
-    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.2), 0px 10px 20px 0px rgba(0, 0, 0, 0.2);
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#__framer-editorbar.mode_subtle {
-    --padding-right: 10px;
-    overflow: hidden;
-    position: fixed;
-    right: var(--padding-right);
-    border: none;
-    z-index: 2147483647;
-    top: 0;
-    width: calc(100vw - var(--padding-right));
-    height: 100vh;
-}
-
-#__framer-editorbar.mode_subtle.status_hidden {
-    display: none;
-}
-
-#__framer-editorbar.mode_subtle.status_measuring {
-    clip-path: unset;
-}
-</style><link rel="stylesheet" href="https://app.framerstatic.com/editorbar-controller.OX2PJMZZ.css"></head>
+</head>
 
 <body data-new-gr-c-s-check-loaded="14.1223.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1223.0">
     <script async="" src="https://events.framer.com/script" data-fid="868255964b72eb00581cb957e8190f97540b2a03004c0cb6dbcb2922470bb763"></script>
